Add Docker setup and fixes